<resources>
    <string name="app_name">Pharmacy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="BLANK"></string>
    <string name="COMMON_SUCCESS">Thành công</string>
    <string name="COMMON_ERROR">Lỗi</string>
    <string name="COMMON_OK">Đồng ý</string>
    <string name="COMMON_OK_EN">OK</string>
    <string name="COMMON_NO">Không</string>
    <string name="COMMON_SAVE">Lưu</string>
    <string name="COMMON_YES">Đồng ý</string>
    <string name="COMMON_CANCEL">Hủy</string>
    <string name="COMMON_MESSAGE">Lời nhắn</string>
    <string name="COMMON_DAY">Ngày</string>
    <string name="COMMON_CUMULATIVE">Lũy kế đến</string>
    <string name="COMMON_DATA_NULL">Không có dữ liệu</string>
    <string name="COMMON_FILTER">Tìm kiếm&#8230;</string>
    <string name="API_KEY">AIzaSyCGvM_I5LkyLHfqBLGKMg_1WP84NQOl5ds</string>
    <string name="descr_image">Image</string>
    <string name="COMMON_INTERNET_CONNECTION">Vấn đề kết nối internet</string>
    <string name="COMMON_ERROR_MSG">Đã có lỗi xảy ra trong quá trình xử lý. Vui lòng thử lại.</string>
    <string name="COMMON_ERROR_MSG_LOAD_DATA_LOCAL">Vấn đề kết nối internet. Chương trình sẽ hiển thị dữ liệu đã được lưu trước đó.</string>
    <string name="LOADING">Đang tải&#8230;</string>
    <string name="PROCESSING">Đang xử lý&#8230;</string>
    <string name="USERNAME_REQUIRE">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890 _</string>
    <string name="USERNAME">Tên đăng nhập</string>
    <string name="PASSWORD">Mật khẩu</string>
    <string name="LOGIN">ĐĂNG NHẬP</string>
    <string name="USERNAME_NOT_BLANK">Tên đăng nhập không được để trống</string>
    <string name="PASSWORD_NOT_BLANK">Mật khẩu không được để trống</string>
    <string name="BEGIN_NOT_NUMBER">Bắt đầu không được là số</string>
    <string name="PASSWORD_MORE_SEVEN">Mật khẩu phải lớn hơn 7 ký tự</string>
    <string name="PASSWORD_HAS_NUMBER">Mật khẩu phải có ít nhất một chữ số</string>
    <string name="PASSWORD_HAS_LETTER_UPPER_">Mật khẩu phải có ít nhất một chữ cái viết hoa</string>
    <string name="LOGIN_FAILE">Đăng nhập bị lỗi</string>
    <string name="SIGNING_IN">Đang đăng nhập&#8230;</string>
    <string name="CHANGE_PASSWORD">Đổi mật khẩu</string>
    <string name="SETTING">Cài đặt</string>
    <string name="LOGOUT">Đăng xuất</string>
    <string name="GENERAL">Tổng quan</string>
    <string name="DIRECT_CUSTOMER">Tuyến &amp; khách hàng</string>
    <string name="VISIT">Ghé thăm</string>
    <string name="SALE">Bán hàng</string>
    <string name="DELIVER">Giao hàng</string>
    <string name="SLIDE_SHOW">Trình chiếu</string>
    <string name="MANAGE_GIMIC">Quản lý GIMIC</string>
    <string name="REPORT">Báo cáo</string>
    <string name="MORE_ARE_YOU_SURE">Bạn chắc chắn muốn thoát?</string>
    <string name="PROFIT_REPORT">Báo cáo doanh số</string>
    <string name="COVER_REPORT">Báo cáo độ phủ</string>
    <string name="CUSTOMER_NOT_PROFIT">Khách hàng chưa phát sinh doanh số</string>
    <string name="CUSTOMER_NOT_PROFIT_TITLE">KH chưa phát sinh doanh số</string>
    <string name="ADDRESS">Địa chỉ: </string>
    <string name="ROUND">Tuyến: </string>
    <string name="LIST_AGO_MONTH">DS tháng trước: </string>
    <string name="VISIT_TIME">Số lần ghé thăm: </string>
    <string name="LAST_ORDER">Đơn hàng cuối: </string>
    <string name="PROFIT">Doanh số</string>
    <string name="PRODUCT_COVER">Độ phủ sản phẩm</string>
    <string name="PLAN_WORK_DAYS">Số ngày làm việc theo kế hoạch: </string>
    <string name="PAST_WORK_DAYS">Số ngày làm việc đã qua: </string>
    <string name="CONTENT">Nội dung</string>
    <string name="PLANT">Kế hoạch</string>
    <string name="PROCESS">Thực hiện</string>
    <string name="CON_LAI">Còn lại</string>
    <string name="TIEN_DO">Tiến độ</string>
    <string name="PROFIT_VND">Doanh số\n(ngàn đồng)</string>
    <string name="TPL">TPL</string>
    <string name="TPL_PLUS">TPL - Plus</string>
    <string name="TPL_PLUS1">TPL Plus</string>
    <string name="MAXXHAIR">Maxxhair</string>
    <string name="MXH">MXH</string>
    <string name="NIEU_BAO">Niệu bảo</string>
    <string name="TPL_FAST">TPL - Fast</string>
    <string name="TPL_FAST1">TPL Fast</string>
    <string name="CUSTOMER_NEED_VISIT">Số KH cần\nghé thăm</string>
    <string name="CUSTOMER_VISITED">Số KH đã\nghé thăm</string>
    <string name="COVER_PRODUCT">Độ phủ sản phẩm</string>
    <string name="LIST_CUSTOMER">Danh sách khách hàng</string>
    <string name="MAP">Bản đồ</string>
    <string name="CREATE_NEW_CUSTOMER">Tạo khách hàng mới</string>
    <string name="CREATE_NEW_CUSTOMER_PENDING">Danh sách yêu cầu tạo mới đang chờ duyệt: </string>
    <string name="LIST_CUSTOMER_PENDING">Danh sách chờ duyệt</string>
    <string name="LIST_STORE_PENDING">Danh sách khách hàng đang chờ duyệt</string>
    <string name="PENDING">Đang chờ duyệt&#8230;</string>
    <string name="CUSTOMER_INFORMATION">Thông tin khách hàng</string>
    <string name="PHARMACY_NAME">Tên nhà thuốc: </string>
    <string name="PHONE_NUMBER">SĐT:</string>
    <string name="ACCUMULATION_POINT">Điểm tích lũy: </string>
    <string name="VIP">Độ Vip: </string>
    <string name="EDIT">Chỉnh sửa</string>
    <string name="OWNER_PHARMACY">Chủ nhà thuốc</string>
    <string name="OWNER_PHARMACY_TWO_DOTS">Chủ nhà thuốc: </string>
    <string name="BIRTHDAY">Ngày sinh: </string>
    <string name="NOTE">Ghi chú: </string>
    <string name="SALER">N.Viên bán hàng</string>
    <string name="SALER_TWO_DOTS">N.Viên bán hàng: </string>
    <string name="MARK">Điểm: </string>
    <string name="PROFIT_SUM">Tổng doanh số: </string>
    <string name="PROFIT_INFORMATION">Thông tin doanh số</string>
    <string name="PROFIT_THRE_AGO">Doanh số 3 tháng gần đây</string>
    <string name="PROFIT_FIVE_ORDER">Doanh số 5 đơn hàng gần nhất</string>
    <string name="INDEX">STT</string>
    <string name="TIME">Thời gian</string>
    <string name="PROFIT_VND_HORIZION">Doanh số (ngàn đồng)</string>
    <string name="INFORMATION_EDIT">Chỉnh sửa thông tin</string>
    <string name="PHARMACY_INFORMATION">THÔNG TIN NHÀ THUỐC</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="EDIT_HUMAN_RESOURCE">(*) Để chỉnh sửa thông tin nhân sự, xin vui lòng click vào trường muốn sửa.</string>
    <string name="HUMAN_RESOURCE_INFORMATION">THÔNG TIN NHÂN SỰ</string>
    <string name="OWNER_PHARMACY_INFORMATION">THÔNG TIN CHỦ NHÀ THUỐC</string>
    <string name="ADD_OWNER_PHARMACY">Thêm chủ nhà thuốc</string>
    <string name="ADD_STAFF">Thêm nhân sự</string>
    <string name="REMOVE_STAFF">Xóa nhân sự</string>
    <string name="SALER_INFORMATION">THÔNG TIN N.VIÊN BÁN HÀNG</string>
    <string name="STAFF">N.Viên</string>
    <string name="ADD_SALER">Thêm nhân viên bán hàng</string>
    <string name="UPDATE">Cập nhật</string>
    <string name="CUSTOMER_CREATE">Tạo mới khách hàng</string>
    <string name="PHARMACY_NAME_TWO_DOTS">Tên nhà thuốc</string>
    <string name="ADDRESS_TWO_DOTS">Địa chỉ</string>
    <string name="PHONE_NUMBER_DETAILS">Số điện thoại</string>
    <string name="LINE">Tuyến:</string>
    <string name="LINE_PERIOR">Tuyến &amp; chu kỳ:</string>
    <string name="PERIOR">Chu kỳ:</string>
    <string name="T2">T2</string>
    <string name="T3">T3</string>
    <string name="T4">T4</string>
    <string name="T5">T5</string>
    <string name="T6">T6</string>
    <string name="T7">T7</string>
    <string name="ONE_LAN">1T/lần</string>
    <string name="TWO_LAN">2T/lần</string>
    <string name="THREE_LAN">3T/lần</string>
    <string name="FOUR_LAN">4T/lần</string>
    <string name="REQUEST_CHANGE_LINE">Yêu cầu đổi tuyến</string>
    <string name="REQUEST_CHANGE_LINE_NOTE">(Yêu cầu thay đổi tuyến cần được phê duyệt và sẽ tự động cập nhật khi có kết quả)</string>
    <string name="DAY_OF_BIRTH">Ngày sinh</string>
    <string name="NOTE_TWO_DOTS">Ghi chú</string>
    <string name="SEND_REQUEST">Gửi yêu cầu</string>
    <string name="CONFIRM_REQUEST">Yêu cầu tạo cửa hàng mới sau khi được gửi đi cần chờ xác nhận.</string>
    <string name="VIEW_LIST_PENDING">Để xem danh sách các yêu cầu đang chờ duyệt click vào</string>
    <string name="HERE">Đây</string>
    <string name="THREE_QUESTION">\???</string>
    <string name="SELECT_DAY">Chọn ngày</string>
    <string name="SELECT_MONTH">Chọn tháng</string>
    <string name="SELECT_YEAR">Chọn năm</string>
    <string name="STORES_NAME_NOT_BLANK">Tên nhà thuốc không được để trống</string>
    <string name="STORES_ADDRESS_NOT_BLANK">Địa chỉ nhà thuốc không được để trống</string>
    <string name="STORES_PHONE_NOT_BLANK">Điện thoại nhà thuốc không được để trống</string>
    <string name="NAME">Tên</string>
    <string name="ROLE">Vai trò</string>
    <string name="OWNER">Chủ nhà thuốc</string>
    <string name="STAFF_FULL">Nhân viên nhà thuốc</string>
    <string name="DES_UPDATE_GPS">Nếu bạn muốn cập nhật tọa độ nhà thuốc thì nhấn vào</string>
    <string name="UPDATE_GPS">Cập nhật tọa độ GPS</string>
    <string name="DEFAULT_FILTER_LOCATIONEST">Mặc định sắp xếp theo vị trí gần nhất</string>
    <string name="VOTE">Xếp loại: </string>
    <string name="BUY_HISTORY">Lịch sử mua hàng</string>
    <string name="CHECK_WAREHOUSE">Kiểm tra tồn kho</string>
    <string name="UNIT">Đơn vị tính: </string>
    <string name="BUY_ORDER">Đặt hàng</string>
    <string name="GIMIC_GIVE">Tặng gimic</string>
    <string name="CLOSE_DOOR">Đóng cửa</string>
    <string name="FEED_BACK">Phản hồi</string>
    <string name="VISIT_FINISH">Kết thúc ghé thăm</string>
    <string name="SUM_POINT_PROGRAM">Tổng điểm tích lũy trong chương trình: </string>
    <string name="SUM_PROFIT_TWO_DOTS">Tổng doanh số: </string>
    <string name="FIVE_ORDEREST">5 đơn hàng gần nhất</string>
    <string name="PROFIT_THREE_MONTHEST">Doanh số 3 tháng gần nhất</string>
    <string name="CREATE_ORDER">Tạo đơn hàng</string>
    <string name="REQUEST_SENDED">Yêu cầu tạo đơn hàng của bạn đã được gửi đi, vui lòng chờ xác nhận. Xin cám ơn!</string>
    <string name="THREE_DOTS">&#8230;</string>
    <string name="IMAGE_CUSTOMER_NAME_TITLE">Tên:(*)</string>
    <string name="IMAGE_CUSTOMER_RATE_TITLE">Đánh giá:</string>
    <string name="IMAGE_CUSTOMER_FEEDBACK_TITLE">Nội dung phản hồi:</string>
    <string name="SEND_FEED_BACK">Gửi đánh giá</string>
    <string name="TD">TĐ</string>
    <string name="CK">CK</string>
    <string name="OTHER">Khác</string>
    <string name="PRODUCT_DOT">S.Phẩm</string>
    <string name="VALUE">Giá</string>
    <string name="QUANTITY">S.Lượng</string>
    <string name="SUM_MONEY">T.Tiền</string>
    <string name="NOTE_DOT">G.Chú</string>
    <string name="PROMOTIONAL">Khuyến mại</string>
    <string name="SUM_TWO_DOTS">Tổng cộng: </string>
    <string name="MONEY_SEND">Tiền được CK: </string>
    <string name="PROMOTIONAL_VALUE">Giá trị khuyến mại: </string>
    <string name="OK">Đồng ý</string>
    <string name="CANCEL">Hủy</string>
    <string name="ARE_YOU_SURE_CANCEL_ORDER">Bạn muốn "Hủy" đơn hàng?</string>
    <string name="DO_YOU_WANT_DELIVER_ORDER">Bạn muốn thực hiện giao hàng cho đơn hàng này?</string>
    <string name="PLEASE_ENTER_REASON">Xin vui lòng nhập lý do hủy đơn hàng để hoàn thành việc hủy bỏ:</string>
    <string name="TITLE_PHARMACIER_NAME">Họ và tên:</string>
    <string name="TITLE_PHARMACIER_QUALIFICATION">Trình độ học vấn:</string>
    <string name="TITLE_WORKING_TIME">Thời gian bắt đầu làm việc tại công ty:</string>
    <string name="TITLE_WORKING_POSITION">Vị trí công việc:</string>
    <string name="TITLE_LIFE_OPINION">Quan điểm sống:</string>
    <string name="TITLE_WORK_OPINION">Quan điểm nghề nghiệp:</string>
    <string name="TITLE_MUC_TIEU_CONG_VIEC">Mục tiêu công việc:</string>
    <string name="TITLE_LINK_WEB">Link đến website:</string>
</resources>