<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/TRANSPARENT_BLACK"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="4dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/ARE_YOU_SURE_CANCEL_ORDER"
        android:textColor="@color/WHITE"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/PLEASE_ENTER_REASON"
        android:textColor="@color/WHITE"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edtContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:background="@color/WHITE"
        android:gravity="top"
        android:hint="@string/BLANK"
        android:inputType="textMultiLine"
        android:lines="5"
        android:padding="4dp"
        android:singleLine="false"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnOk"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:drawableRight="@drawable/icon_ok"
            android:text="@string/OK"
            android:textColor="@color/WHITE"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:drawableRight="@drawable/icon_delete"
            android:text="@string/CANCEL"
            android:textColor="@color/WHITE"
            android:textSize="12dp" />
    </LinearLayout>

</LinearLayout>