<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:orientation="vertical" >
    
    <include
        layout="@layout/header_layout"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="@dimen/padding_body_screen"
        android:paddingRight="@dimen/padding_body_screen"
        android:orientation="vertical">
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center_horizontal"
                android:layout_weight="2">
                <ImageView 
	                android:id="@+id/imgPharmaceAvata"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:minHeight="120dp"
	                android:background="@color/GRAY88"
	                android:src="@drawable/pharmacer_avata"/>
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical">
                
                <TextView 
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/BLACK"
                    android:text="@string/TITLE_PHARMACIER_NAME"/>
                
                <TextView 
                    android:id="@+id/tvQualification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp"
                    android:textColor="@color/BLACK"
                    android:text="@string/TITLE_PHARMACIER_QUALIFICATION"/>
                
                <TextView 
                    android:id="@+id/tvWorkTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp"
                    android:textColor="@color/BLACK"
                    android:text="@string/TITLE_WORKING_TIME"/>
                
                <TextView 
                    android:id="@+id/tvWorkPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp"
                    android:textColor="@color/BLACK"
                    android:text="@string/TITLE_WORKING_POSITION"/>
                
                <TextView 
                    android:id="@+id/tvLifeOpinion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp"
                    android:textColor="@color/BLACK"
                    android:text="@string/TITLE_LIFE_OPINION"/>
                
                <TextView 
                    android:id="@+id/tvCarrierOpinion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp"
                    android:textColor="@color/BLACK"
                    android:text="@string/TITLE_WORK_OPINION"/>
            </LinearLayout>
        </LinearLayout>
        
        <!-- layout muc tieu cong viec -->
        <TextView
            android:id="@+id/tvMucTieuCongViec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/TITLE_MUC_TIEU_CONG_VIEC"
            android:textColor="@color/BLACK"
            android:textSize="14sp" />

         <!-- layout muc tieu cong viec -->
        <TextView
            android:id="@+id/tvLinkWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autoLink="web"
            android:text="@string/TITLE_LINK_WEB"
            android:textColor="@color/BLACK"
            android:textSize="14sp" />
    </LinearLayout> <!-- layout body :END -->

</LinearLayout>
