<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/BLACK" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/PINK_LIGHT"
        android:orientation="horizontal" >

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/BLACK" />

        <TextView
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/INDEX"
            android:textColor="@color/BLACK"
            android:textSize="8sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/BLACK" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/PRODUCT_DOT"
            android:textColor="@color/BLACK"
            android:textSize="8sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/BLACK" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/VALUE"
            android:textColor="@color/BLACK"
            android:textSize="8sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/BLACK" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/QUANTITY"
            android:textColor="@color/BLACK"
            android:textSize="8sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/BLACK" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/CK"
            android:textColor="@color/BLACK"
            android:textSize="8sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/BLACK" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/SUM_MONEY"
            android:textColor="@color/BLACK"
            android:textSize="8sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/BLACK" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/NOTE_DOT"
            android:textColor="@color/BLACK"
            android:textSize="8sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/BLACK" />
    </LinearLayout>

</LinearLayout>