<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/TRANSPARENT_BLACK"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:text="@string/DO_YOU_WANT_DELIVER_ORDER"
        android:textColor="@color/WHITE"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnOk"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:drawableRight="@drawable/icon_ok"
            android:text="@string/OK"
            android:textColor="@color/WHITE"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:layout_marginLeft="8dp"
            android:drawableRight="@drawable/icon_delete"
            android:text="@string/CANCEL"
            android:textColor="@color/WHITE"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>