<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GREEN"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:background="@color/GREEN"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"        
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/BLANK"
                android:scaleType="fitXY"
                android:src="@drawable/logo_pharmacy" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/BLANK"
                    android:scaleType="fitXY"
                    android:src="@drawable/access_new_account" />

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/WHITE"
                    android:digits="@string/USERNAME_REQUIRE"
                    android:hint="@string/USERNAME"
                    android:padding="12dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/BLANK"
                    android:scaleType="fitXY"
                    android:src="@drawable/access_new_account" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/WHITE"
                    android:hint="@string/PASSWORD"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:background="@drawable/bg_btn_blue"
                android:padding="12dp"
                android:text="@string/LOGIN"
                android:textColor="@color/WHITE" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>